# UDPExercise

./: .gitignore  CMakeLists.txt  common.h  readme.md
client/: client.cpp  client.h  runClient.cpp
server/: runServer.cpp  server.cpp  server.h
socket/: UdpSocket.cpp  UdpSocket.h
